2012-06-04  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/tst-getcpu.c (do_test): Call perror when
	cpu2 is -1 and errno is not ENOSYS.

2012-06-04  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/i386/i486/bits/string.h: Renamed to ...
	* sysdeps/x86/bits/string.h: This.
	* sysdeps/x86_64/bits/string.h: Removed.

	* sysdeps/i386/i486/bits/string.h: Define inline functions only
	if not compiling for x86-64, but compiling for >= i486.

	* sysdeps/unix/sysv/linux/x86_64/bits/sigcontext.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/sigcontext.h: This.

	* sysdeps/unix/sysv/linux/x86_64/bits/sigcontext.h (FP_XSTATE_MAGIC1):
	New macro from Linux kernel 3.4.0.
	(FP_XSTATE_MAGIC2): Likewise.
	(FP_XSTATE_MAGIC2_SIZE): Likewise.
	(X86_FXSR_MAGIC): New macro from Linux i386 kernel.
	(struct _fpx_sw_bytes): New struct.
	(struct _xsave_hdr): Likewise.
	(struct _ymmh_state): Likewise.
	(struct _xstate): Likewise.

	* sysdeps/unix/sysv/linux/i386/sys/debugreg.h: Removed.
	* sysdeps/unix/sysv/linux/i386/sys/reg.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sys/debugreg.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/sys/debugreg.h: This.
	* sysdeps/unix/sysv/linux/x86_64/sys/reg.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/sys/reg.h: This.

	* sysdeps/unix/sysv/linux/i386/sys/io.h: Removed.
	* sysdeps/unix/sysv/linux/x86_64/sys/io.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/sys/io.h: This.
	* sysdeps/unix/sysv/linux/i386/sys/perm.h: Removed.
	* sysdeps/unix/sysv/linux/x86_64/sys/perm.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/sys/perm.h: This.

2012-06-04  Tulio Magno Quites Machado Filho  <tuliom@linux.vnet.ibm.com>

	[BZ #13743]
	* sysdeps/powerpc/sys/platform/ppc.h: New file for PowerPC features.
	* sysdeps/powerpc/Makefile (tests): Add test-gettimebase.
	(sysdep_headers): Include sys/platform/ppc.h.
	* sysdeps/powerpc/test-gettimebase.c: Test for
	__ppc_get_timebase() to catch future ISA opcode/insn changes.